# WxSharp

./: CMakeLists.txt  README
cmake/: UseCSharp.cmake
sample/: AssemblyInfo.cs  CMakeLists.txt  sample.cs
swig/: AssemblyInfo.cs.in  CMakeLists.txt  anybutton.i  app.i  button.i  control.i  defs.i  event.i  eventfilter.i  frame.i  gdicmn.i  nonownedwnd.i  object.i  toplevel.i  validate.i  window.i  wx.i  wx_typemaps.i  wxstring.i
wxc/: CMakeLists.txt  Setup.hs  wxc.cabal
wxc-sample/: CMakeLists.txt  sample.cpp
wxc/src/cpp/: defs.cpp  eljdialup.cpp  eljgrid.cpp  eljipc.cpp  eljjoystick.cpp  eljplot.cpp  ewxw_main.cpp  extra.cpp  graphicscontext.cpp  wrapper.cpp
wxc/src/include/: graphicscontext.h  wxc.h  wxc_glue.h
